# cheshire

./: .codecov.yml  .gitattributes  .gitignore  .markdownlint.yaml  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yml  .secrets.baseline  AGENTS.md  MANIFEST.in  README.md  README.rst  environment.yml  pyproject.toml  setup.py  tox.ini  zensical.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: bot-auto-merge.yml  docker-build-push.yml  docs.yml  pre-commit-ci-auto-merge.yaml  pytest.yml  release.yml  repo2docker.yaml  repo2docker.yml  tox-pytest.yml  update-lockfiles.yml
docker/: Dockerfile
docs/: code_of_conduct.md  conf.py  index.md  index.rst  license.md  reference.md  release_notes.md  tools.md
notebooks/: notebook.ipynb
src/cheshire/: __init__.py  cli.py  dummy.py
src/package_name/: __init__.py  cli.py  dummy.py
tests/: __init__.py  conftest.py
tests/integration/: console_scripts_test.py  dummy_test.py  jupyter_notebooks_test.py
tests/unit/: dummy_test.py
