[build-system]
build-backend = "hatchling.build"
requires = ["hatch-vcs>=0.5", "hatchling>=1.31"]

[project]
# This should be the *installed* package name e.g. catalystcoop.pudl not pudl
name = "catalystcoop.cheshire"
description = "Replace this text with a one line description of the package."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Catalyst Cooperative", email = "pudl@catalyst.coop" }]
requires-python = ">=3.14,<3.15"
dynamic = ["version"]
license = { file = "LICENSE.txt" }
dependencies = [
  "pandas[parquet,excel,fss,gcp,compression]>=3.0.3",
  "pydantic[email]>=2.13.4",
  "polars>=1.42.1",
  "duckdb>=1.5.4",
  "pyarrow>=25.0.0",
  "pandera>=0.32.1",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
keywords = [
  "template",
  "testing",
  "linting",
  "github actions",
  "continuous integration",
  "continuous delivery",
]

[project.scripts]
# "script_name = dotted.module.path.to:main_script_function",
winston = "cheshire.cli:main"

[project.urls]
# "Homepage" = ""
"Source" = "https://github.com/catalyst-cooperative/cheshire"
"Documentation" = "https://docs.catalyst.coop/cheshire"
"Issue Tracker" = "https://github.com/catalyst-cooperative/cheshire/issues"

[project.optional-dependencies]
dev = [
  "build>=1.5.0", # PEP 517 build frontend, used to build the sdist/wheel
  "prek>=0.4.10", # Fast Rust-based pre-commit hook runner
  "twine>=6.2.0", # Used to make releases to PyPI
]
docs = [
  "mkdocstrings-python>=2.0.5", # Renders API docs from docstrings, used by zensical
  "zensical>=0.0.50",           # Markdown-based static site generator for docs
]
lint = [
  "mdformat-mkdocs>=5", # Stops mdformat from mangling zensical/MkDocs markdown syntax
  "ruff>=0.15.22",      # A very fast python linter & autofixer
]
tests = [
  "coverage>=7.15.2",              # Lets us track what code is being tested
  "exceptiongroup>=1.3.1",
  "jupyter>=1.1.1",                # For integration testing Jupyter notebooks
  "nbconvert>=7.17.1",
  "nbformat>=5.10.4",
  "pytest-console-scripts>=1.4.1", # Allow automatic testing of scripts
  "pytest-cov>=7.1.0",             # Pytest plugin for working with coverage
  "pytest>=9.1.1",                 # Our testing framework
]
types = [
  "ty>=0.0.61", # Extremely fast Rust-based Python type checker, from Astral
]

[tool.hatch.version]
# Derive the package version from the latest git tag, rather than storing it in the
# repository and manually updating it.
source = "vcs"

[tool.hatch.build.targets.wheel]
# hatchling can't auto-detect the package directory here because the distribution
# name (catalystcoop.cheshire) doesn't match the importable package name (cheshire).
packages = ["src/cheshire"]

[tool.pytest]
testpaths = ["."]
filterwarnings = [
  # Examples of how to filter out pytest warnings from dependencies
  # "ignore:distutils Version classes are deprecated:DeprecationWarning",
  # "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning",
  # "ignore:Deprecated call to.*declare_namespace:DeprecationWarning:pkg_resources",
]

addopts = ["--verbose", "--pdbcls=IPython.terminal.debugger:TerminalPdb"]
log_format = "%(asctime)s [%(levelname)8s] %(name)s:%(lineno)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_cli_level = "DEBUG"
doctest_optionflags = [
  "NORMALIZE_WHITESPACE",
  "IGNORE_EXCEPTION_DETAIL",
  "ELLIPSIS",
]

[tool.ruff]
# Configurations that apply to both the `format` and `lint` subcommands.
target-version = "py314"
line-length = 88
indent-width = 4

[tool.ruff.format]
# Configuration specfic to the `format` subcommand.
# We use black compatible formatting.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "C",   # Limit cyclomatic complexity using mccabe
  "C4",  # flake8-comprehensions
  "D",   # pydocstyle errors
  "E",   # pycodestyle errors
  "EXE", # executable file issues
  "F",   # pyflakes
  "I",   # isort
  "ICN", # flake8 import conventions
  "N",   # pep8-naming
  "NPY", # NumPy specific checks
  "PD",  # pandas checks
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie miscellaneous linting
  "PTH", # use pathlib
  "Q",   # flake8-quotes
  "RET", # check return values
  "RSE", # unnecessary parenthises on raised exceptions
  "S",   # flake8-bandit
  "SIM", # flake8-simplify
  "UP",  # pyupgrade (use modern python syntax)
  "W",   # pycodestyle warnings
  # "ARG", # unused arguments
  # "ERA", # eradicate: find commented out code
  # "PL",  # pylint
  # "PT",  # pytest style
  # "T",   # print statements found
]
ignore = [
  "D401",   # Require imperative mood in docstrings.
  "D417",
  "E501",   # Overlong lines.
  "PD010",  # Use of df.stack()
  "PD013",  # Use of df.unstack()
  "PD015",  # Use of pd.merge() rather than df.merge()
  "RET504", # Ignore unnecessary assignment before return
  "S101",   # Use of assert
]
extend-select = ["NPY201"] # preview rule to easy migration to Numpy 2.0

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports
"tests/*" = ["D"]

[tool.ruff.lint.pep8-naming]
# Allow Pydantic's `@validator` decorator to trigger class method treatment.
classmethod-decorators = ["pydantic.validator", "pydantic.root_validator"]

[tool.ruff.lint.isort]
known-first-party = ["cheshire"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.coverage.report]
precision = 2
sort = "miss"
skip_empty = true
fail_under = 90
# fail_under is enforced once, after unit and integration coverage are combined, by
# the final "coverage report" invocation in the `test` pixi task below -- not here,
# since pytest-cov would otherwise also enforce it after unit or integration tests
# run on their own, before the other suite gets a chance to contribute its coverage.
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",

  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",

  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if __name__ == .__main__.:",

  # Stuff that's not expected to run normally...
  "logger.debug",
]

[tool.ty.src]
# Unlike pyrefly's pre-commit hook, ty always runs with the full pixi environment
# (see the local "ty" pre-commit hook below), so there's no need to limit checking
# to "src" alone the way pyrefly's config used to.
include = ["src", "tests"]

# No [tool.ty.environment] python-version setting -- ty already infers it from
# `project.requires-python` above, so pinning it again here would just be tracking
# the same version in two places.

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-aarch64", "osx-arm64", "linux-64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
# Install this package itself in editable mode, pulling in every optional-dependency
# group defined above (see [project.optional-dependencies]) so the whole development
# toolchain is available. Spelled out explicitly here, rather than relying on pixi's
# implicit "a feature with the same name as an extra pulls in that extra" behavior,
# so it's obvious at a glance which extras are actually installed.
"catalystcoop.cheshire" = { path = ".", editable = true, extras = [
  "dev",
  "docs",
  "lint",
  "tests",
  "types",
] }

# Non-Python formatting tools that aren't published to PyPI, so they can't be
# expressed as project.optional-dependencies extras and added above.
[tool.pixi.feature.lint.dependencies]
markdownlint-cli2 = ">=0.23.0"
mdformat = ">=1.0.0"
mdformat-gfm = ">=1.0.0"
mdformat-frontmatter = ">=2.1"
prettier = ">=3.9.3"
taplo = ">=0.10.0"

# A single environment with everything needed for local development, since this is a
# small template repository that doesn't benefit from separate per-task environments.
# "lint" is the only named feature to add here -- it's the one place we need conda
# (rather than PyPI) packages -- everything else comes from the extras listed above.
[tool.pixi.environments]
default = { features = ["lint"], solve-group = "default" }

[tool.pixi.tasks]
test-erase = { cmd = "coverage erase", description = "Wipe previously recorded coverage data before the test suites run." }
test-unit = { cmd = "pytest --cov=cheshire --cov-append --cov-report=xml --cov-fail-under=0 --doctest-modules src/cheshire tests/unit", depends-on = [
  "test-erase",
], description = "Run unit tests (and doctests) with coverage instrumentation." }
test-integration = { cmd = "pytest --cov=cheshire --cov-append --cov-report=xml --cov-fail-under=0 tests/integration", depends-on = [
  "test-erase",
], description = "Run integration tests with coverage instrumentation." }
test = { cmd = "coverage report --sort=cover", depends-on = [
  "test-unit",
  "test-integration",
], description = "Run all tests and report combined coverage, failing if it's below the configured threshold." }

lint-ruff = { cmd = "ruff check .", description = "Check code style and correctness with ruff, without modifying files." }
lint-ty = { cmd = "ty check", description = "Type check the code with ty." }
lint = { depends-on = [
  "lint-ruff",
  "lint-ty",
], description = "Run all linters and type checks, without modifying files." }

format-ruff = { cmd = "ruff format . && ruff check --fix .", description = "Reformat code and auto-fix lint issues with ruff." }
format-toml = { cmd = "taplo fmt pyproject.toml zensical.toml", description = "Reformat TOML files with taplo." }
format-md = { cmd = "mdformat README.md AGENTS.md docs", description = "Reformat Markdown files with mdformat." }
format-yaml = { cmd = "prettier --write '**/*.{yaml,yml}'", description = "Reformat YAML files with prettier." }
format = { depends-on = [
  "format-ruff",
  "format-toml",
  "format-md",
  "format-yaml",
], description = "Run all formatters, modifying files in place." }

docs = { cmd = "zensical build", description = "Build the documentation with Zensical into site/." }
docs-serve = { cmd = "zensical serve", description = "Serve the documentation locally, rebuilding on changes." }

prek-update = { cmd = "prek update", description = "Bump the `rev` pins in .pre-commit-config.yaml to their latest tagged versions. Used by .github/workflows/update-lockfiles.yml; see also `pixi update` for refreshing pixi.lock itself." }

build = { cmd = "python -m build && twine check --strict dist/*", description = "Build the sdist and wheel, and verify them with twine." }
